2010-01-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: VRuler now draws
	  correctly with multiple line text markers.

2010-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed hruler drawing bug.

2010-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting.Regex/Regex.cs: fixed 'Bug
	  568483 - IndexOutOfRangeException in CSharpSyntaxMode'.

2010-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting.Regex/Regex.cs: fixed 'Bug
	  568483 - IndexOutOfRangeException in CSharpSyntaxMode'.

2010-01-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/LineSplitter.cs: Remove lines with extending
	  markers, when the line is removed.

2010-01-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 567317 -
	  Underscores not always visible in text editor when usign
	  specific fonts, like Courier New'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSyntaxMode.xml:
	* SyntaxModes/CPPSyntaxMode.xml: Fixed 'Bug 564387 - #if 0
	  grayed out until #endif'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSharpSyntaxMode.xml: fixed 'Bug 564378 - Inline
	  comments in c# with ///< screw up code coloring'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: fixed 'Bug 560510 -
	  Preprocessor enabled code shows as comment anyway'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed
	  'Bug 560510 - Preprocessor enabled code shows as comment
	  anyway'.

2009-12-12  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor/TextViewMargin.cs: Make bracket matching
	  more selective for cursor types that enclose a character.
	  Fixes #562289.

2009-12-11  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: