@@ -1,3 +1,7 @@
+2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.TextEditor/TextEditor.cs: Fix some GTK 2.12 FIXMEs.
+
 2010-01-07  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/TextViewMargin.cs: VRuler now draws
